--- a/time.html
+++ b/time.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <title>デジタル時計</title>
-   <script src="js/digitalClock.js"></script>
+   <script src="digitalClock.js"></script>
 </head>
 <body onload="start()">
  <h1>デジタル時計</h1>
