--- a/time.html
+++ b/time.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
    <meta charset="UTF-8">
+   <link rel="stylesheet" href="css/style.css">
    <title>デジタル時計</title>
    <script src="digitalClock.js"></script>
 </head>
